overlaping styles fixed

--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -1,146 +1,147 @@
 $font-stack: Poppins, sans-serif;
 $font-stack-sub: DM Sans, sans-serif;
-$mid-blue: #219EBC;
-$mid-yellow: #FFB703;
-$light-blue: #8ECAE6;
-$dark-blue: #04496A;
-$dark-yellow: #FB8500;
-$light-yellow: #F3CB69;
+$mid-blue: #219ebc;
+$mid-yellow: #ffb703;
+$light-blue: #8ecae6;
+$dark-blue: #04496a;
+$dark-yellow: #fb8500;
+$light-yellow: #f3cb69;
 $text: #393737;
 
-
 * {
-    font: 100% $font-stack-sub;
+  font: 100% $font-stack-sub;
 }
 
 .indexContent {
-    width: auto;
-    height: 100vh;
-    margin: auto;
+  width: auto;
+  height: 100vh;
+  margin: auto;
 
-    .card {
-        width: 430px;
-        height: auto;
-        border-radius: 1.5em;
-        border: 3px solid #E3E6F0;
-        box-shadow: 0px 0px 20px 0px #aeaeae;
+  .card {
+    width: 430px;
+    height: auto;
+    z-index: 8;
+    border-radius: 1.5em;
+    border: 3px solid #e3e6f0;
+    box-shadow: 0px 0px 20px 0px #aeaeae;
 
-        .card-body{
-            margin: 10px;
+    .card-body {
+      margin: 10px;
 
-            .cardHead {
-                margin-top: 5px;
-                padding: 0;
-                font: 100% $font-stack;
-                font-size: 40px;
-                font-weight: 900;
-                color: $mid-yellow;
-            }
-
-            .hrSvg {
-                width: 60%;
-            }
-            
-            .fieldRow{
-                margin: 25px;
-            }
-
-            .controlBtn {
-                width: 10em;
-                background-color: $mid-blue;
-                color: white;
-                font-size: 1.3em;
-                font-weight: 700;
-            }
-
-            #resetBtn{
-                width: 6em;
-            }
-
-            #loginBtn:hover, #resetBtn:hover{
-                background-color: $dark-blue;
-            }
-
-            #signupBtn, #resetBtn{
-                background-color: $mid-yellow;
-            }
-
-            #signupBtn:hover, #resetBtn:hover{
-                background-color: $dark-yellow;
-            }
-
-            #signup-phrase{
-                color: $mid-blue;
-                font-weight: 500;
-            }
-
-            .signup-txt {
-                text-decoration: none;
-                color: $mid-yellow;
-                font-weight: 800;
-            }
-
-            #forgotPassText{
-                text-decoration: none;
-                font-size: 0.8em;
-                font-weight: 400;
-                color: #aeaeae;
-            }
-
-            #forgotPassText:hover{
-                text-decoration: underline;
-                color: $dark-blue;
-            }
-        }
-    }
-
-    #signupCard {
-        width: 34em;
-
-        #login-phrase{
-            color: $mid-yellow;
-            font-weight: 500;
-        }
-
-        .login-txt {
-            text-decoration: none;
-            color: $mid-blue;
-            font-weight: 800;
-        }
-    }
-    
-    #rbackBtn {
-        color: #aeaeae;
-        position: absolute;
-        top: 40px;
-        left: 40px;
-    }
-
-    #rbackBtn:hover {
-        color: $text;
-    }
-    
-    .resetPassHead{
+      .cardHead {
+        margin-top: 5px;
+        padding: 0;
         font: 100% $font-stack;
-        padding-right: 1em;
+        font-size: 40px;
+        font-weight: 900;
+        color: $mid-yellow;
+      }
+
+      .hrSvg {
+        width: 60%;
+      }
+
+      .fieldRow {
+        margin: 25px;
+      }
+
+      .controlBtn {
+        width: 10em;
+        background-color: $mid-blue;
+        color: white;
         font-size: 1.3em;
-        font-weight: 500;
+        font-weight: 700;
+      }
+
+      #resetBtn {
+        width: 6em;
+      }
+
+      #loginBtn:hover,
+      #resetBtn:hover {
+        background-color: $dark-blue;
+      }
+
+      #signupBtn,
+      #resetBtn {
+        background-color: $mid-yellow;
+      }
+
+      #signupBtn:hover,
+      #resetBtn:hover {
+        background-color: $dark-yellow;
+      }
+
+      #signup-phrase {
         color: $mid-blue;
+        font-weight: 500;
+      }
+
+      .signup-txt {
+        text-decoration: none;
+        color: $mid-yellow;
+        font-weight: 800;
+      }
+
+      #forgotPassText {
+        text-decoration: none;
+        font-size: 0.8em;
+        font-weight: 400;
+        color: #aeaeae;
+      }
+
+      #forgotPassText:hover {
+        text-decoration: underline;
+        color: $dark-blue;
+      }
     }
+  }
+
+  #rbackBtn {
+    color: #aeaeae;
+    position: absolute;
+    top: 40px;
+    left: 40px;
+  }
+
+  #rbackBtn:hover {
+    color: $text;
+  }
+
+  .resetPassHead {
+    font: 100% $font-stack;
+    padding-right: 1em;
+    font-size: 1.3em;
+    font-weight: 500;
+    color: $mid-blue;
+  }
 }
 
+#signupCard {
+  width: 550px;
+
+  #login-phrase {
+    color: $mid-yellow;
+    font-weight: 500;
+  }
+
+  .login-txt {
+    text-decoration: none;
+    color: $mid-blue;
+    font-weight: 800;
+  }
+}
 .indexContent::-webkit-scrollbar {
-    width: 10px;               /* width of the entire scrollbar */
-}
-  
-.indexContent::-webkit-scrollbar-track {
-    background: none;        /* color of the tracking area */
-}
-  
-.indexContent::-webkit-scrollbar-thumb {
-    background-color: #c9c9c9;    /* color of the scroll thumb */
-    border-radius: 20px;       /* roundness of the scroll thumb */
-    border: 3px solid #c9c9c9;  /* creates padding around scroll thumb */
-    z-index: -60;
+  width: 10px; /* width of the entire scrollbar */
 }
 
+.indexContent::-webkit-scrollbar-track {
+  background: none; /* color of the tracking area */
+}
+
+.indexContent::-webkit-scrollbar-thumb {
+  background-color: #c9c9c9; /* color of the scroll thumb */
+  border-radius: 20px; /* roundness of the scroll thumb */
+  border: 3px solid #c9c9c9; /* creates padding around scroll thumb */
+  z-index: -60;
+}
